--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -13,8 +13,7 @@
 </head>
 <body>
   <nav class="sidebar">
-    <h1 class="profile-title">もふもふ</h1>
-	 <p class="profile-subtext">소중한 반려동물을 프로필에 추가하세요✨</p>
+	 <p class="profile-subtext">소중한 반려동물을<br>프로필에 추가하세요</p>
     <div class="profile-list-wrapper">
         <div id="profile-list">
             <div id="profile-container"></div>
