--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -23,7 +23,9 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+	font-family: 'Gowun Dodum', sans-serif;
+	}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -2079,14 +2081,22 @@ input, select, textarea {
 
 		.icon.style1 {
 			color: #00ffcc;
+			background-color:white;
 		}
 
 		.icon.style2 {
-			color: #00f0ff;
+			color: red;
+			background-color:white;
 		}
 
 		.icon.style3 {
 			color: #76ddff;
+			background-color:white;
+		}
+		
+		.icon.style4 {
+			color: #D8BFD8;
+			background-color:white;
 		}
 
 /* Image */
@@ -2669,6 +2679,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
+		
 	}
 
 		.spotlight .image {
@@ -2677,12 +2688,19 @@ input, select, textarea {
 			-ms-order: 1;
 			order: 1;
 			border-radius: 0;
-			width: 40%;
+			
+			
+			flex-shrink: 0; /* 사진 크기 고정 */
+    		width: 400px; /* 고정 너비 */
+    		height: 400px; /* 고정 높이 */
 		}
 
 			.spotlight .image img {
 				border-radius: 0;
 				width: 100%;
+				
+				height: 100%;
+    			object-fit: cover;
 			}
 
 		.spotlight .content {
@@ -2693,6 +2711,16 @@ input, select, textarea {
 			order: 2;
 			max-width: 48em;
 			width: 60%;
+		}
+		.spotlight .content-l {
+			padding: 2em 4em 0.1em 4em ;
+			-moz-order: 2;
+			-webkit-order: 2;
+			-ms-order: 2;
+			order: 2;
+			max-width: 48em;
+			width: 60%;
+			margin-right:150px;
 		}
 
 		.spotlight:nth-child(2n) {
@@ -2817,7 +2845,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #F4C2C2;
 			color: #c8ece9;
 		}
 
@@ -2850,7 +2878,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 header.major p {
-				color: #c8ece9;
+				color: white;
 			}
 
 			.wrapper.style1 label {
@@ -2980,8 +3008,8 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
-			color: #d3d4e4;
+			background-color: #FFD1DC;
+			color: white;
 		}
 
 			.wrapper.style3 strong, .wrapper.style3 b {
@@ -3013,7 +3041,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style3 header.major p {
-				color: #d3d4e4;
+				color: white;
 			}
 
 			.wrapper.style3 label {
