--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, user-scalable=no" />
 <link rel="stylesheet" href="assets/css/main.css" />
+<link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 <noscript>
 	<link rel="stylesheet" href="assets/css/noscript.css" />
 </noscript>
@@ -20,7 +21,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner">
-				<h2>모후모후</h2>
+				<h2>もふもふ</h2>
 				<p>
 					당신의 반려동물과의 소중한 일상을 기록하고 관리하세요!<br /> <br />
 				</p>
@@ -52,12 +53,14 @@
 					</p>
 				</header>
 				<ul class="icons major">
-					<li><span class="icon fa-gem major style1"><span
-							class="label">Lorem</span></span></li>
+					<li><span class="icon fa-calendar-alt major style1"><span
+							class="label">캘린더</span></span></li>
 					<li><span class="icon fa-heart major style2"><span
-							class="label">Ipsum</span></span></li>
-					<li><span class="icon solid fa-code major style3"><span
-							class="label">Dolor</span></span></li>
+							class="label">피드</span></span></li>
+					<li><span class="icon fa-comments major style3"><span
+							class="label">게시판</span></span></li>
+					<li><span class="icon fa-map major style4"><span
+							class="label">장소추천</span></span></li>
 				</ul>
 			</div>
 		</section>
@@ -66,24 +69,12 @@
 		<section id="two" class="wrapper alt style2">
 			<section class="spotlight">
 				<div class="image">
-					<img src="images/pic01.jpg" alt="" />
+					<img src="images/petCalendar.jpg" alt="" />
 				</div>
 				<div class="content">
 					<h2>
-						반려동물의 하루를 적어보세요<br />
+						Calendar<br />
 					</h2>
-					<p>
-						반려동물과 함께한 하루의 특별한 순간들을 기록해보세요. 귀여운 사진과 따뜻한 글로<br> 추억을 남길 수 있는
-						일지 작성 기능은 반려동물과의 일상을 더욱 의미 있게 만들어줍니다.<br> 반려동물의 성장 과정을 시간순으로
-						정리하고, 필요한 경우 언제든지 다시 확인할 수 있어<br> 소중한 순간을 놓치지 않도록 돕습니다.
-					</p>
-				</div>
-			</section>
-			<section class="spotlight">
-				<div class="image">
-					<img src="images/pic02.jpg" alt="" />
-				</div>
-				<div class="content">
 					<h2>
 						캘린더로 일정을 관리하세요<br />
 					</h2>
@@ -96,9 +87,30 @@
 			</section>
 			<section class="spotlight">
 				<div class="image">
-					<img src="images/pic03.jpg" alt="" />
+					<img src="images/petFeed1.jpg" alt="" />
+				</div>
+				<div class="content-l">
+					<h2>
+						Feed<br />
+					</h2>
+					<h2>
+						반려동물의 하루를 적어보세요<br />
+					</h2>
+					<p>
+						반려동물과 함께한 하루의 특별한 순간들을 기록해보세요. 귀여운 사진과 따뜻한 글로<br> 추억을 남길 수 있는
+						일지 작성 기능은 반려동물과의 일상을 더욱 의미 있게 만들어줍니다.<br> 반려동물의 성장 과정을 시간순으로
+						정리하고, 필요한 경우 언제든지 다시 확인할 수 있어<br> 소중한 순간을 놓치지 않도록 돕습니다.
+					</p>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image">
+					<img src="images/petBoard1.jpg" alt="" />
 				</div>
 				<div class="content">
+					<h2>
+						Notice board<br />
+					</h2>
 					<h2>
 						커뮤니티<br />
 					</h2>
@@ -109,12 +121,14 @@
 					</p>
 				</div>
 			</section>
-		</section>
 		<section class="spotlight">
 			<div class="image">
-				<img src="images/pic02.jpg" alt="" />
+				<img src="images/petLocation2.jpg" alt="" />
 			</div>
-			<div class="content">
+			<div class="content-l">
+				<h2>
+					Location&Review<br />
+				</h2>
 				<h2>
 					장소추천<br />
 				</h2>
@@ -125,6 +139,7 @@
 					모후모후에서 손쉽게 찾아보세요!
 				</p>
 			</div>
+		</section>
 		</section>
 
 		<!-- Three -->
