--- a/src/main/resources/static/calendar/css/style.css
+++ b/src/main/resources/static/calendar/css/style.css
@@ -78,14 +78,6 @@ body {
 }
 
 .navbar-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  position: fixed;
-  height: 50px;
-}
-.navbar-container {
     position: fixed;
     top: 0;
     left: 0;
@@ -228,10 +220,11 @@ body {
   background-color: #ddd;
 }
 /*로고 이미지 2/7*/
-/* .logoimage{
-	height: auto; 비율 유지
-	width: 70%;
-} */
+.logoimage{
+	height: auto; 
+	width: 40%;
+}
+
 /*로그아웃 버튼 색 2/7*/
 #logoutButton{
 	background-color:	#FFD1DC;
