--- a/src/main/resources/static/assets/css/wirte.css
+++ b/src/main/resources/static/assets/css/wirte.css
@@ -18,7 +18,7 @@ body {
 .navbar-container {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 0;/*  */
     width: 100%;
     height: 80px; /* 높이 설정 */
     background-color: white;
