--- a/src/main/resources/static/assets/css/profile.css
+++ b/src/main/resources/static/assets/css/profile.css
@@ -152,6 +152,7 @@ p.profile-subtext {
     justify-content: center;
     align-items: center;
     z-index: 2;
+    margin-top:30px;
 }
 
 .popup-content {
