--- a/src/main/resources/static/calendar/css/modal.css
+++ b/src/main/resources/static/calendar/css/modal.css
@@ -11,6 +11,7 @@
 	border: 2px solid #FFD1DC; /* 파란색 창 테두리 */
 	width: 400px; /* 고정 너비 */
 	border-radius: 10px; /* 테두리 둥글게 설정 */
+	margin-top:40px;
 }
 
 label { /* 입력창과의 간격조절 */
