--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -2711,6 +2711,7 @@ input, select, textarea {
 			order: 2;
 			max-width: 48em;
 			width: 60%;
+			
 		}
 		.spotlight .content-l {
 			padding: 2em 4em 0.1em 4em ;
@@ -2720,7 +2721,8 @@ input, select, textarea {
 			order: 2;
 			max-width: 48em;
 			width: 60%;
-			margin-right:150px;
+			margin-right:20px;
+			text-align : right;
 		}
 
 		.spotlight:nth-child(2n) {
@@ -3610,6 +3612,7 @@ input, select, textarea {
 		overflow: hidden;
 		position: relative;
 		text-align: center;
+	
 	}
 
 		#banner h2 {
@@ -4025,3 +4028,63 @@ input, select, textarea {
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
 	}
+
+
+
+
+/* 배너 전체 설정 */
+#banner {
+    display: flex; /* 좌우 배치 */
+    align-items:center;
+    justify-content:center;
+    height: 100vh; /* 전체 높이 */
+}
+.banner-container{
+	display:flex;
+	width:100%;
+	height:100vh;
+
+}
+
+
+/* 좌측 50% 이미지 컨테이너 */
+.image-container {
+    width: 50vw; /* 전체 너비의 50% */
+    height: 100vh; /* 전체 높이 */
+    overflow: hidden; /* 넘치는 부분 제거 */
+    
+}
+
+/* 이미지 크기 설정 */
+.image-container img {
+    width: 100%;
+    height: 100%;
+
+   
+}
+
+/* 우측 50% 텍스트 영역 */
+.inner-container {
+    width: 50vw; /* 화면의 나머지 50% */
+    height: 100vh;
+    display: flex;
+    align-items: center; /* 수직 중앙 정렬 */
+    justify-content: center; /* 가로 중앙 정렬 */
+    background-color:white;
+    color:pink;
+}
+
+/* 텍스트 콘텐츠 스타일 */
+.inner {
+    width:50%;
+}
+
+.inner h2{
+	color:pink;
+}
+.more scrolly{
+	color:black !important;
+}
+element.style {
+    color: black;
+}
