--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,20 +11,62 @@
 <noscript>
 	<link rel="stylesheet" href="assets/css/noscript.css" />
 </noscript>
+
 </head>
 <body class="landing is-preload">
 
 	<!-- Page Wrapper -->
-	<div id="page-wrapper">
 
+	<div id="page-wrapper">
 
 		<!-- Banner -->
 		<section id="banner">
+		<div class="banner-container">
+		
+			<div class="image-container">			
+				<div class="image">
+						<img src="images/pet13.jpg" alt="" />
+				</div>
+			</div>
+			
+		<div class="inner-container">
+			
 			<div class="inner">
 				<h2>もふもふ</h2>
 				<p>
 					당신의 반려동물과의 소중한 일상을 기록하고 관리하세요!<br /> <br />
 				</p>
+				
+				<div class="container">
+        <div class="login-form">
+            
+            <form action="/user/login" method="POST">
+                <div class="form-group">
+                    <label for="userId">아이디</label>
+                    <input type="text" id="userId" name="userId" placeholder="아이디를 입력하세요" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">비밀번호</label>
+                    <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요" required>
+                </div>
+                <button type="submit" class="btn">로그인</button>
+            </form>
+            <div class="additional-links">
+                <a href="/user/find-id">아이디 찾기</a>
+                <a href="/user/reset-password">비밀번호 찾기</a>
+                <a href="/user/register">회원가입</a>
+            </div>
+            <!-- 소셜 로그인 버튼 -->
+            <div class="social-login">
+                <a href="/oauth2/authorization/google" class="btn social-btn google">
+                    Google로 로그인
+                </a>
+            </div>
+        </div>
+    </div>
+				
+				
+				
 				<ul class="actions special">
 					<li><a href="#" class="button primary"
 						onclick="location.href='/user/register'">회원가입</a></li>
@@ -32,6 +74,14 @@
 						onclick="location.href='/user/login'">로그인</a></li>
 				</ul>
 			</div>
+			</div>
+			
+		
+		
+		
+        
+		</div>
+			
 			<a href="#one" class="more scrolly">Learn More</a>
 		</section>
 
@@ -59,7 +109,7 @@
 							class="label">피드</span></span></li>
 					<li><span class="icon fa-comments major style3"><span
 							class="label">게시판</span></span></li>
-					<li><span class="icon fa-map major style4"><span
+					<li><span class="icon fa-flag major style4"><span
 							class="label">장소추천</span></span></li>
 				</ul>
 			</div>
@@ -87,7 +137,7 @@
 			</section>
 			<section class="spotlight">
 				<div class="image">
-					<img src="images/petFeed1.jpg" alt="" />
+					<img src="images/petFeed3.jpg" alt="" />
 				</div>
 				<div class="content-l">
 					<h2>
@@ -98,14 +148,14 @@
 					</h2>
 					<p>
 						반려동물과 함께한 하루의 특별한 순간들을 기록해보세요. 귀여운 사진과 따뜻한 글로<br> 추억을 남길 수 있는
-						일지 작성 기능은 반려동물과의 일상을 더욱 의미 있게 만들어줍니다.<br> 반려동물의 성장 과정을 시간순으로
+						일지 작성 기능은 반려동물과의 일상을 <br>더욱 의미 있게 만들어줍니다.<br> 반려동물의 성장 과정을 시간순으로
 						정리하고, 필요한 경우 언제든지 다시 확인할 수 있어<br> 소중한 순간을 놓치지 않도록 돕습니다.
 					</p>
 				</div>
 			</section>
 			<section class="spotlight">
 				<div class="image">
-					<img src="images/petBoard1.jpg" alt="" />
+					<img src="images/petBoard2.jpg" alt="" />
 				</div>
 				<div class="content">
 					<h2>
@@ -194,9 +244,7 @@
 			</div>
 		</section>
 
-		<!-- Footer -->
-		<footer id="footer">
-		</footer>
+		
 	</div>
 
 	<!-- Scripts -->
