--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -104,7 +104,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #fff;
+		
 		font-family: "Open Sans", Helvetica, sans-serif;
 		font-size: 15pt;
 		font-weight: 400;
@@ -142,7 +142,7 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
-		border-bottom: dotted 1px;
+	
 		color: inherit;
 		text-decoration: none;
 	}
@@ -1823,9 +1823,10 @@ input, select, textarea {
 	label {
 		color: #fff;
 		display: block;
-		font-size: 0.9em;
+		font-size: 1.3em;
 		font-weight: 600;
-		margin: 0 0 1em 0;
+		margin-bottom:10px;
+		
 	}
 
 	input[type="text"],
@@ -1837,15 +1838,15 @@ input, select, textarea {
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background-color: rgba(144, 144, 144, 0.25);
-		border-radius: 3px;
-		border: none;
-		color: inherit;
+		border-radius: 5px;
+		border: 1px solid #ccc;
+		font-family: 'Gowun Dodum', sans-serif;		
 		display: block;
 		outline: 0;
 		padding: 0 1em;
 		text-decoration: none;
 		width: 100%;
+		margin-bottom: 20px; /* 고정 값 설정 */
 	}
 
 		input[type="text"]:invalid,
@@ -1854,6 +1855,7 @@ input, select, textarea {
 		select:invalid,
 		textarea:invalid {
 			box-shadow: none;
+			margin-bottom:20px;
 		}
 
 		input[type="text"]:focus,
@@ -1861,7 +1863,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			box-shadow: 0 0 0 2px #21b2a6;
+			margin-bottom: 20px !important; /* 입력 중에도 유지 */
 		}
 
 	select {
@@ -1970,22 +1972,22 @@ input, select, textarea {
 	}
 
 	::-webkit-input-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: rgba(200, 200, 200, 0.8) !important;
 		opacity: 1.0;
 	}
 
 	:-moz-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: rgba(200, 200, 200, 0.8) !important;
 		opacity: 1.0;
 	}
 
 	::-moz-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: rgba(200, 200, 200, 0.8) !important;
 		opacity: 1.0;
 	}
 
 	:-ms-input-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: rgba(200, 200, 200, 0.8) !important;
 		opacity: 1.0;
 	}
 
@@ -2679,7 +2681,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		
+	
 	}
 
 		.spotlight .image {
@@ -2711,7 +2713,7 @@ input, select, textarea {
 			order: 2;
 			max-width: 48em;
 			width: 60%;
-			
+			color:pink;
 		}
 		.spotlight .content-l {
 			padding: 2em 4em 0.1em 4em ;
@@ -2723,6 +2725,7 @@ input, select, textarea {
 			width: 60%;
 			margin-right:20px;
 			text-align : right;
+			color:pink;
 		}
 
 		.spotlight:nth-child(2n) {
@@ -2733,19 +2736,19 @@ input, select, textarea {
 		}
 
 		.spotlight:nth-child(1) {
-			background-color: rgba(0, 0, 0, 0.075);
+			background-color: rgba(255,255,255);
 		}
 
 		.spotlight:nth-child(2) {
-			background-color: rgba(0, 0, 0, 0.15);
+			background-color: #FCFCFC;
 		}
 
 		.spotlight:nth-child(3) {
-			background-color: rgba(0, 0, 0, 0.225);
+			background-color:  #F9F9F9;
 		}
 
 		.spotlight:nth-child(4) {
-			background-color: rgba(0, 0, 0, 0.3);
+			background-color: #F5F5F5;
 		}
 
 		.spotlight:nth-child(5) {
@@ -2778,8 +2781,9 @@ input, select, textarea {
 				width: 45%;
 			}
 
-			.spotlight .content {
+			.spotlight .content{
 				width: 55%;
+				color:pink;
 			}
 
 		}
@@ -3169,7 +3173,7 @@ input, select, textarea {
 			}
 
 		.wrapper.style4 {
-			background-color: transparent;
+			background-color: white;
 		}
 
 		.wrapper.style5 {
@@ -3697,10 +3701,12 @@ input, select, textarea {
 			text-transform: uppercase;
 			width: 16em;
 			z-index: 1;
+		
+    
 		}
 
 			#banner .more:after {
-				background-image: url("images/arrow.svg");
+			
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: contain;
@@ -4082,9 +4088,7 @@ input, select, textarea {
 .inner h2{
 	color:pink;
 }
-.more scrolly{
-	color:black !important;
-}
+
 element.style {
     color: black;
 }
