--- a/src/main/resources/static/location/css/location-read.css
+++ b/src/main/resources/static/location/css/location-read.css
@@ -137,8 +137,8 @@
    border: 1px solid #ddd;
    border-radius: 10px;
    padding: 10px;
-   background-color: #f9f9f9;
-   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+   background-color: white;
+   box-shadow: 0 0 5px 	#FFD1DC;
    text-align: left;
    position: relative;
 }
