인덱스, 회원가입 페이지 css 수정 완료

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,9 @@
 		<div class="inner-container">
 			
 			<div class="inner">
-				<p style="font-size:50px; margin-bottom:30px;">もふもふ</p>
+				<div class="logo">		
+	    				<img src="/images/logo2.jpg" alt="로고 이미지" class="logoimage" />	
+				</div>
 				<p>
 					당신의 반려동물과의 소중한 일상을 기록하고 관리하세요!<br /> <br />
 				</p>
