--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -4092,3 +4092,12 @@ input, select, textarea {
 element.style {
     color: black;
 }
+.logo{
+	margin-bottom:10px;
+	margin-right:10px;
+}
+.logoimage{
+	width: 80%; 
+    height: 80%; 
+    object-fit: cover;
+}
