css 최종 완료 (화면 비율 100%)

--- a/src/main/resources/static/location/css/location-read.css
+++ b/src/main/resources/static/location/css/location-read.css
@@ -348,6 +348,7 @@
     margin-top: 50px;
     margin-left: 360px;
     box-sizing: border-box;
+    max-width:1140px;
 }
 
 /* 콘텐츠 영역 */
@@ -399,7 +400,7 @@
 
 .help-icon-container {
     position: fixed;
-    top: 20%;
+    top: 15%;
     right: 20px;
     z-index: 2;
 }
