--- a/src/main/resources/templates/location/locationUpdate.html
+++ b/src/main/resources/templates/location/locationUpdate.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/default.css">
     <link rel="stylesheet" href="/location/css/location-update.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <!-- 카카오맵 API -->
     <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=278940b595d1bf12680c71409de85eda&libraries=services"></script>
 </head>
@@ -79,7 +80,7 @@
                      </div>
                     <!-- 버튼 -->
                     <div class="d-flex justify-content-end">
-                        <button type="submit" class="btn btn-primary me-2">수정하기</button>
+                        <button type="submit" class="btn btn-primary me-2" style="background-color:pink; border-color: pink;">수정하기</button>
                         <button type="button" class="btn btn-secondary" onclick="window.close()">닫기</button>
                     </div>
 				</form>
