--- a/src/main/resources/templates/review/reviewUpdate.html
+++ b/src/main/resources/templates/review/reviewUpdate.html
@@ -7,6 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/review/css/review-update.css">
+<link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container mt-5">
@@ -56,8 +57,8 @@
                  <!-- 버튼 -->
                  <div class="center">
                      <button type="submit" class="btn btn-primary">수정하기</button>
-                     <button type="reset" class="btn btn-secondary">다시쓰기</button>
-                     <button type="button" class="btn btn-danger" onclick="window.close()">닫기</button>
+                
+                     <button type="button" class="btn btn-secondary" onclick="window.close()">닫기</button>
                  </div>
 			</form>
 			</div>
