--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -96,13 +96,19 @@
 						소개<br />
 					</h2>
 					<p>
-						요즘 반려동물을 가족처럼 여기는 사람들이 많아지면서, 반려동물과의 추억을 기록하고<br> 정보를 공유할 수
-						있는 공간에 대한 필요성이 커지고 있습니다.<br> 이 사이트는 반려동물의 일상과 건강 관리를 손쉽게 도와주는
+						요즘 반려동물을 가족처럼 여기는 사람들이 많아지면서, 반려동물과의 추억을 기록하고 정보를 공유할 수
+						있는 공간에 대한 필요성이 커지고 있습니다. 이 사이트는 반려동물의 일상과 건강 관리를 손쉽게 도와주는
 						웹 플랫폼입니다.<br> 사용자는 반려동물의 프로필을 작성하고, 소중한 일상들을 사진과 글로 남길 수 있으며,<br>
 						다양한 주제의 커뮤니티 게시판을 통해 다른 반려인들과 경험을 나눌 수 있습니다.<br> 또한, 반려동물과 함께
-						방문할 수 있는 카페, 공원, 병원, 유치원 등<br> 다양한 장소를 검색하고 추천받을 수 있는 기능도
-						제공합니다.<br> 이 사이트는 반려동물과의 시간을 더욱 특별하게 만들어줄<br> 디지털 동반자가
+						방문할 수 있는 카페, 공원, 병원, 유치원 등 다양한 장소를 검색하고 추천받을 수 있는 기능도
+						제공합니다.<br> 이 사이트는 반려동물과의 시간을 더욱 특별하게 만들어줄 디지털 동반자가
 						되고자 합니다.
+					</p>
+					<h2>
+						비전<br />
+					</h2>
+					<p>
+						"사람과 반려동물이 함께 더 행복해지는 세상”을 목표로, 이 플랫폼은 단순히 스케줄을 관리하는 도구를 넘어 반려동물과 사람을 연결하고, 공감과 소통의 커뮤니티를 만드는 것을 지향합니다.
 					</p>
 				</header>
 				<ul class="icons major">
