--- a/src/main/resources/templates/user/reset-password.html
+++ b/src/main/resources/templates/user/reset-password.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>비밀번호 찾기</title>
     <link rel="stylesheet" href="/assets/css/reset-password.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- 로그인 버튼 -->
-    <a href="/user/login" class="nav-link">로그인</a>
+<div class="r-container">
+    
+        <div class="image-container">			
+				<div class="image">
+						<img src="/images/pet13.jpg" alt="" />
+				</div>
+			</div>
 
     <div class="container">
-        <h1>임시 비밀번호 발급</h1>
 
         <!-- 비밀번호 찾기 폼 -->
         <form id="resetPasswordForm" action="#" method="POST" class="reset-password-form">
+        <h1>임시 비밀번호 발급</h1>
             <!-- 아이디 입력 -->
             <div class="form-group">
                 <label for="userId">아이디</label>
@@ -25,27 +31,34 @@
             <!-- 이메일 입력 -->
             <div class="form-group">
                 <label for="email">이메일</label>
+                <div class="i-b-group">
                 <input type="email" id="email" name="email" placeholder="가입한 이메일을 입력하세요" required>
-                <div id="emailError" class="error-message"></div>
                 <button type="button" id="emailVerificationButton" class="btn">인증 요청</button>
+            	</div>
+                <div id="emailError" class="error-message"></div>
             </div>
 
             <!-- 인증 코드 입력 -->
             <div class="form-group">
                 <label for="verificationCode">인증 코드</label>
+                <div class="i-b-group">
                 <input type="text" id="verificationCode" name="verificationCode" placeholder="인증 코드를 입력하세요" required disabled>
-                <div id="verificationCodeError" class="error-message"></div>
                 <button type="button" id="verificationCodeButton" class="btn" disabled>코드 확인</button>
+            	</div>
+                <div id="verificationCodeError" class="error-message"></div>
             </div>
 
             <!-- 비밀번호 발급 버튼 -->
             <button type="submit" id="resetPasswordButton" class="btn" disabled>임시 비밀번호 발급</button>
+            
+            <!-- 로그인 버튼 -->
+    		<a href="/user/login" class="btn">로그인하러 가기</a>
+	        <!-- 결과 메시지 -->
+	        <div id="result" class="result-message hidden"></div>
         </form>
 
-        <!-- 결과 메시지 -->
-        <div id="result" class="result-message hidden"></div>
     </div>
-
+</div>
     <script src="/assets/js/reset-password.js"></script>
 </body>
 </html>
